# advent-of-code-2024

./: .gitignore  Cargo.toml  README.md  new_day.py  template.rs_
day1/: Cargo.toml
day1/src/: main.rs
day2/: Cargo.toml
day2/src/: main.rs
day3/: Cargo.toml
day3/src/: main.rs
day4/: Cargo.toml
day4/src/: main.rs
day5/: Cargo.toml
day5/src/: main.rs
day6/: Cargo.toml  puzzle.txt
day6/src/: main.rs
utils/: Cargo.toml
utils/src/: lib.rs
