[package]
name = "day4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-iterator = "2.1.0"
nom = "7.1.3"
strum = { version = "0.26.3", features = ["strum_macros"] }
utils = { version = "0.1.0", path = "../utils" }
